# robotics-2-exercise

./: .gitignore
exercise-0/: pendulum.lua  pendulum.txt
exercise-0/Solution/: pendulum.lua  sampleanimation.txt  samplemodel.lua  wave.txt
exercise-1/Exercise/: humanoid_animation.txt  humanoid_model.lua  humanoid_model_giorgos.lua  pendulum.txt
exercise-1/Exercise/rbdl/: CMakeLists.txt  Makefile  arrows.ff  cmake_install.cmake  main.cpp  rbdl_model_analysis  rbdl_model_analysis.cbp
exercise-2/IVP/: Makefile  Sheet02MORMS14.cbp  assigment_1  assigment_2  build.ninja  cmake_install.cmake  visualize.py
exercise-2/IVP/src/: main_2.1.cc  main_2.2.cc
exercise-2/icub/: CMakeLists.txt  Makefile  cmake_install.cmake  icub  main.cpp
exercise-2/icub/models/: iCubHeidelberg01.lua
exercise-3/BVP/: CMakeLists.txt  Makefile  cmake_install.cmake
exercise-3/BVP/RES/: bvp1-1.ps  bvp1.txt  bvp2-1.ps  bvp2.txt  bvp3-1.ps  bvp3.txt  bvp4-1.ps  bvp4.txt
exercise-3/icub2/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  rbdl_model_analysis
exercise-4/RocketCar_Template/: CMakeLists.txt  Makefile  cmake_install.cmake
exercise-5/Cart_Pendulum_Template/: Makefile  cmake_install.cmake  model.lua
exercise-6/Hopping_robot/: CMakeLists.txt  Makefile  cmake_install.cmake  hoppingrobot.lua
exercise-6/Hopping_robot/RES/: hoppingrobot-1.ps  hoppingrobot.txt  hoppingrobot_lagrange-1.ps  hoppingrobot_lagrange.txt  hoppingrobot_mayer-1.ps  hoppingrobot_mayer.txt
exercise-6/Hopping_robot/SRC/: hoppingrobot.cc  hoppingrobot_lagrange.cc  hoppingrobot_mayer.cc
(+21 files in other folders)
